<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SohuPicFrame</string>
    <string name="action_settings">Settings</string>
    
    <string name="drawer_photo">相册</string>
    <string name="drawer_notice">通知</string>
    <string name="drawer_set">设置</string>
    
    <string name="photo_toggle">相册-菜单按钮</string>
    <string name="photo_upload">相册-上传按钮</string>
    
    <string name="photo_auto_upload">开启自动上传</string>
    <string name="photo_manual_upload">手动上传</string>
    <string name="photo_upload_notice">张图片没有备份</string>
    
</resources>